--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,6 @@ h1 {
 
   #seccion-buscador,
   #titular, #carrito,
-  #infoPortada,
   #footer {
     display: initial;
   }
@@ -243,6 +242,7 @@ h1 {
     padding: 5px;
     padding-left: 10px;
     margin-top: 15px;
+    color: black;
   }
 
   #seccion-acceso {
